--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: page
 title: About
-permalink: /about
+permalink: /about/
 ---
 <p align="center">
   <img width="250" height="250" src="{{ '/assets/images/profile_photo.png' | relative_url }}">
